# rami_project_m2

./: .gitignore  CMakeLists.txt  Regles.txt
src/: Carte.cpp  Carte.h  Hand.cpp  Hand.h  Joueur.cpp  Joueur.h  Paquet.cpp  Paquet.h  Scenario.cpp  Scenario.h  main.cpp
